Write unit tests for view state mapping, with a slightly contrived implemenation of the mapping.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ android {
                 }
             }
         }
+
+        unitTests.returnDefaultValues = true
     }
 
     buildFeatures {
